Fixed Overview and it's corresponding DTO's along with the Return values for the needed methods/classes and added necessary types in front-end